# 2FluidPlasmaSim

./: CMakeLists.txt  Options.txt  README.md  plot_dispersion.py  plot_fields.py
include/: dispersion.hh  plasma_params.hh  simulator.hh
pyscripts/: animate_propagation.py  check_fields.py  dispersion.py  fields.py  plot_dispersion.py  plot_fields.py  propagation.py  utils.py
src/: dispersion.cpp  main.cpp  simulator.cpp
